GNOME Bugzilla – Bug 640983
GtkSettings: Fix theme not updating for dark theme
Last modified: 2011-01-31 02:23:31 UTC
So that the setting can actually be set by the application after GTK+ init'ed.
Created attachment 179669 [details] [review] GtkSettings: Fix theme not updating for dark theme The theme was not updated when the "gtk-application-prefer-dark-theme" GtkSettings property changed.
Created attachment 179670 [details] [review] GtkCssProvider: Take into account variant When loading a theme, make sure we take into account the variant so we don't use the plain version when the theme changes. Also make sure to fallback to the plain theme when loading a variant fails.
Both patches are necessary to get dark themes working again with the CSS theme provider.
Thanks. I've reworked the second patch a bit, doing the fallback in GtkSettings instead of in get_named(). The reason for that is that we're going to land css key theme support soon, and it doesn't make sense to fall back from gtk-keys.css to gtk.css, in most cases.